--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,11 @@
             <artifactId>google-collections</artifactId>
             <version>1.0-rc2</version>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>   
+            <version>2.21.21</version>         
+        </dependency>         
     </dependencies>
 
 </project>
